fix: add width to photo dialog on mobile

--- a/src/app/components/photo-dialog/photo-dialog.component.scss
+++ b/src/app/components/photo-dialog/photo-dialog.component.scss
@@ -80,27 +80,29 @@
 }
 
 @media screen and (max-width: 768px) {
-  .dialog-root {
-    width: 100vw;
-    height: 100vh;
-
-    .body {
+  :host {
+    .dialog-root {
       width: 100%;
-      height: 100%;
-      .preview {
-        flex: 1;
+      height: 100vh;
 
-        img {
-          height: 150px;
+      .body {
+        width: 100%;
+        height: 100%;
+        .preview {
+          flex: 1;
+
+          img {
+            height: 150px;
+          }
         }
       }
-    }
 
-    .footer {
-      position: absolute;
-      bottom: 20px;
-      right: 0;
-      width: 100%;
+      .footer {
+        position: absolute;
+        bottom: 20px;
+        right: 0;
+        width: 100%;
+      }
     }
   }
 }
